Prevent page refresh on submit

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
           <!-- Links -->
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">Input</a>
+              <a class="nav-link" href="index.html">Input</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Analysis</a>
+              <a class="nav-link" href="analysis.html">Analysis</a>
             </li>
           </ul>
         </nav>
@@ -81,7 +81,7 @@
                     <label for="data3">3</label>
                     <input type="text" class="form-control" id="3" placeholder="Enter 3">
                   </div>
-                  <button type="submit" onclick="submitForm()"class="btn btn-primary">Submit</button>
+                  <button type="button" onclick="submitForm()" class="btn btn-primary">Submit</button>
                 </form>
             </div>
         </div>
@@ -91,7 +91,7 @@
 
 
 
-    <script src="https://www.gstatic.com/firebasejs/5.1.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
     <script>
       // Initialize Firebase
       var config = {
