--- a/analysis.html
+++ b/analysis.html
@@ -53,12 +53,14 @@
                   </span>
                 </div>
 
-                <table id="display" class="table table-striped table-bordered" style="width:100%">
+                <table id="display" class="table table-hover table-dark table-responsive" style="width:100%">
                         <thead>
                             <tr>
                                 <th>Match</th>
                                 <th>One</th>
                                 <th>Two</th>
+                            </tr>
+                            <tr>
                             </tr>
                         </thead>
                 </table>
