Added team logo file

--- a/analysis.html
+++ b/analysis.html
@@ -43,16 +43,17 @@
           </ul>
         </nav>
 
+        <br>
         <div class="container">
             <div class="well">
-                <label for="data1">Search Team</label>
+                <h1>Search Team</h1>
                 <div class="input-group">
                   <input type="text" class="form-control" id="searchBar">
                   <span class="input-group-btn">
                     <button class="btn btn-primary" onclick="displayTeam()" type="button">Go!</button>
                   </span>
                 </div>
-
+                <br>
                 <table id="display" class="table table-hover table-dark table-responsive" style="width:100%">
                         <thead>
                             <tr>
