--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-          <!-- Brand/logo -->
-          <a class="navbar-brand" href="#">4308</a>
+          <img src="logo.png" alt="4308" width="40" height="40">
+
           <!-- Links -->
           <ul class="navbar-nav">
             <li class="nav-item">
@@ -22,24 +22,11 @@
         </nav>
 
 
-
+        <br>
         <div class="container">
             <div class="well">
                 <h1>Data Input</h1>
-                <p>Input your data here!</p>
-                <div class="form-check">
-                  <input class="form-check-input" type="radio" name="exampleRadios" id="radio1" value="option1" checked>
-                  <label class="form-check-label" for="radio1">
-                    Default radio
-                  </label>
-                </div>
-                <div class="form-check">
-                  <input class="form-check-input" type="radio" name="exampleRadios" id="radio2" value="option2">
-                  <label class="form-check-label" for="radio2">
-                    Second default radio
-                  </label>
-                </div>
-
+                <br>
                 <div class="form-group row">
                   <label for="teamNum" class="col-sm-2 col-form-label">Team Number</label>
                   <div class="col-sm-10">
@@ -65,24 +52,20 @@
                   </div>
                 </div>
 
-
-
-
-                <form>
-                  <div class="form-group">
-                    <label for="data1">1</label>
-                    <input type="text" class="form-control" id="1" placeholder="Enter 1">
-                  </div>
-                  <div class="form-group">
-                    <label for="data2">2</label>
-                    <input type="text" class="form-control" id="2" placeholder="Enter 2">
-                  </div>
-                  <div class="form-group">
-                    <label for="data3">3</label>
-                    <input type="text" class="form-control" id="3" placeholder="Enter 3">
-                  </div>
-                  <button type="button" onclick="submitForm()" class="btn btn-primary">Submit</button>
-                </form>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="exampleRadios" id="radio1" value="option1" checked>
+                  <label class="form-check-label" for="radio1">
+                    Default radio
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="exampleRadios" id="radio2" value="option2">
+                  <label class="form-check-label" for="radio2">
+                    Second default radio
+                  </label>
+                </div>
+                <br>
+                <button type="button" onclick="submitForm()" class="btn btn-primary">Submit</button>
             </div>
         </div>
 
