--- a/analysis.html
+++ b/analysis.html
@@ -57,7 +57,7 @@
                   </span>
                 </div>
                 <br>
-                <table id="display" class="table table-hover table-dark table-responsive" style="width:100%">
+                <table id="display" class="table table-hover" style="width:100%">
                         <thead>
                             <tr>
                                 <th>Match</th>
