--- a/dashboard.html
+++ b/dashboard.html
@@ -53,8 +53,13 @@
         <div class="container">
             <div class="well">
                 <h1>Dashboard</h1>
-                <div id="piechart"></div>
+                <div class="row">
+                   <div class="col-sm-4" style="background-color:#FFFFFF;">.col-sm-4</div>
+                   <div class="col-sm-4" style="background-color:#FFFFFF;">.col-sm-4</div>
+                   <div class="col-sm-4" style="background-color:#FFFFFF;">.col-sm-4</div>
+                </div>
 
+                <div id="piechart"></div>
                 <script type="text/javascript">
                     // Load google charts
                     google.charts.load('current', {'packages':['corechart']});
