--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                   </label>
                 </div>
                 <br>
-                <button type="button" onclick="submitForm()" class="btn btn-primary">Submit</button>
+                <button type="button" onclick="submitForm()" class="btn btn-dark">Submit</button>
             </div>
         </div>
 
